--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,16 +3,22 @@ inherit_from:
 
 # Put your project-specifc Rubocop config here
 
-Style/ClosingParenthesisIndentation:
+Layout/ClosingParenthesisIndentation:
   Enabled: false
 
-Style/DotPosition:
+Layout/DotPosition:
   EnforcedStyle: 'trailing'
 
-Style/ExtraSpacing:
+Layout/ExtraSpacing:
   Enabled: false
 
-Style/FileName:
+Layout/IndentationWidth:
+  Enabled: false
+
+Layout/MultilineMethodCallIndentation:
+  Enabled: false
+
+Naming/FileName:
   Exclude:
     - 'lib/ruby-progressbar.rb'
 
@@ -22,19 +28,16 @@ Style/FrozenStringLiteralComment:
 Style/HashSyntax:
   EnforcedStyle: hash_rockets
 
-Style/IndentationWidth:
-  Enabled: false
-
 Style/Lambda:
-  Enabled: false
-
-Style/MultilineMethodCallIndentation:
   Enabled: false
 
 Style/NumericPredicate:
   Enabled: false
 
 Style/OptionHash:
+  Enabled: false
+
+Style/SafeNavigation:
   Enabled: false
 
 Style/SymbolArray:
