--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -128,6 +128,7 @@ PreCommit:
   ExecutePermissions:
     enabled:                  true
     exclude:
+      - 'Rakefile'
       - 'bin/**/*'
       - 'script/**/*'
 
