Chore: Upgrade gems

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -46,5 +46,8 @@ Style/SymbolArray:
 Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: 'no_comma'
 
-Style/TrailingCommaInLiteral:
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: 'no_comma'
+
+Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: 'no_comma'
