Chore: Fix Rubocop issues

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,9 @@ inherit_from:
 
 # Put your project-specifc Rubocop config here
 
+Layout/ClassStructure:
+  Enabled: false
+
 Layout/ClosingParenthesisIndentation:
   Enabled: false
 
