--- a/.rubocop_rspec.yml
+++ b/.rubocop_rspec.yml
@@ -1,4 +1,4 @@
-# Last updated to 1.27.0
+# Last updated to 1.31.0
 
 require:
   - 'rubocop-rspec'
@@ -12,11 +12,8 @@ Capybara/CurrentPathExpectation:
 FactoryBot/CreateList:
   Enabled:                        true
 
-FactoryBot/DynamicAttributeDefinedStatically:
+FactoryBot/AttributeDefinedStatically:
   Enabled:                        true
-
-FactoryBot/StaticAttributeDefinedDynamically:
-  Enabled:                        false
 
 Rails/HttpStatus:
   Enabled:                        true
@@ -60,11 +57,6 @@ RSpec/ContextWording:
 RSpec/DescribeClass:
   Enabled:                        true
 
-RSpec/DescribedClass:
-  Enabled:                        true
-  EnforcedStyle:                  'described_class'
-  SkipBlocks:                     false
-
 RSpec/DescribeMethod:
   Enabled:                        true
 
@@ -91,6 +83,8 @@ RSpec/EmptyLineAfterHook:
 
 RSpec/EmptyLineAfterSubject:
   Enabled:                        true
+  Exclude:
+    - '**/factories/*.rb'
 
 RSpec/ExampleLength:
   Enabled:                        false
@@ -133,9 +127,16 @@ RSpec/HookArgument:
   Enabled:                        true
   EnforcedStyle:                  'each'
 
+RSpec/HooksBeforeExamples:
+  Enabled:                        true
+
 RSpec/ImplicitExpect:
   Enabled:                        true
   EnforcedStyle:                  'is_expected'
+
+RSpec/ImplicitSubject:
+  Enabled:                        true
+  EnforcedStyle:                  'single_statement_only'
 
 RSpec/InstanceSpy:
   Enabled:                        true
@@ -173,6 +174,9 @@ RSpec/MessageSpies:
   Enabled:                        true
   EnforcedStyle:                  'have_received'
 
+RSpec/MissingExampleGroupArgument:
+  Enabled:                        true
+
 RSpec/MultipleDescribes:
   Enabled:                        true
 
@@ -186,6 +190,7 @@ RSpec/MultipleSubjects:
 
 RSpec/NamedSubject:
   Enabled:                        true
+  IgnoreSharedExamples:           true
 
 RSpec/NestedGroups:
   Enabled:                        true
@@ -207,6 +212,9 @@ RSpec/PredicateMatcher:
   EnforcedStyle:                  'inflected'
 
 RSpec/ReceiveCounts:
+  Enabled:                        true
+
+RSpec/ReceiveNever:
   Enabled:                        true
 
 RSpec/RepeatedDescription:
@@ -237,9 +245,16 @@ RSpec/SingleArgumentMessageChain:
 RSpec/SubjectStub:
   Enabled:                        true
 
+RSpec/UnspecifiedException:
+  Enabled:                        true
+
 RSpec/VerifiedDoubles:
   Enabled:                        true
   IgnoreSymbolicNames:            false
+  IgnoreNameless:                 false
 
 RSpec/VoidExpect:
+  Enabled:                        true
+
+RSpec/Yield:
   Enabled:                        true
