Replace `actions/setup-ruby` with `ruby/setup-ruby`

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -45,7 +45,7 @@ jobs:
           fetch-depth:            0
 
       - name:                     "Build Ruby"
-        uses:                     "actions/setup-ruby@v1"
+        uses:                     "ruby/setup-ruby@v1"
         with:
           ruby-version:           2.7
 
