--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -4,6 +4,7 @@ name:                             "Build"
 
 on:
   - "push"
+  - "pull_request"
 
 jobs:
   test:
@@ -20,7 +21,9 @@ jobs:
           - 2.5
           - 2.6
           - 2.7
-          - 3.0
+          - '3.0'
+          - 3.1
+          - 3.2
           - ruby-head
         include:
           - ruby:                 2.1
