--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,26 +14,26 @@ jobs:
     strategy:
       matrix:
         ruby:
-          - 2.1
-          - 2.2
-          - 2.3
-          - 2.4
-          - 2.5
-          - 2.6
-          - 2.7
-          - '3.0'
-          - 3.1
-          - 3.2
-          - ruby-head
+          - "2.1"
+          - "2.2"
+          - "2.3"
+          - "2.4"
+          - "2.5"
+          - "2.6"
+          - "2.7"
+          - "3.0"
+          - "3.1"
+          - "3.2"
+          - "ruby-head"
         include:
-          - ruby:                 2.1
-            bundler:              1
+          - ruby:                 "2.1"
+            bundler:              "1"
 
-          - ruby:                 2.2
-            bundler:              1
+          - ruby:                 "2.2"
+            bundler:              "1"
 
-          - ruby:                 2.3
-            bundler:              1
+          - ruby:                 "2.3"
+            bundler:              "1"
 
     continue-on-error: ${{ endsWith(matrix.ruby, 'head') }}
 
